# blitz-2024-registration

./: .gitignore  README.md  package.sh
Blitz2024Registeration/: README.md.md
Blitz2024Registeration/decompiled_js/: action.js.md  game.js.md  geoUtils.js.md  meteor.js.md  projectile.js.md  random.js.md  world.js.md
bot/: .gitignore  Cargo.toml  actions.py  application.py  asserter.py  bot.py  game_events.py  game_message.py  invariants.py  physics.py  plan_follower.py  requirements.txt  simulation.py  stats.py  target_picker.py  target_tracker.py  tracker.py
bot/benches/: beam_search_benchmark.rs  mcts_benchmark.rs  search_benchmark.rs
bot/src/: game_message.rs  game_random.rs  game_search_state.rs  lib.rs  main.rs  mcts.rs  physics.rs  planner.rs  search.rs  seedrandom.rs  simulate.rs  spawn_schedule.rs  vec2.rs
disassembled_js/: README.md  checksum_disassembled_files.sh  disassemble.sh  disassemble_unpacked.js  parse_v8_script_cache.py  remove_disassembly_noise.sh  v8_script_cache_version_hashes.py
disassembled_js/328e68f033f493ba41575fe85f335210/: README.md
disassembled_js/328e68f033f493ba41575fe85f335210/challenge/: action.disass.js  action.js  cannon.disass.js  cannon.js  entity.disass.js  entity.js  error.disass.js  error.js  game.disass.js  game.js  geoUtils.disass.js  geoUtils.js  index.disass.js  index.js  meteor.disass.js  meteor.js  meteor_infos.disass.js  meteor_infos.js  package.json  (+10 more)
disassembled_js/328e68f033f493ba41575fe85f335210/challenge-launcher/: index.disass.js  index.js
disassembled_js/c9b1ac089c04df60393d0f251f0df7d2/: README.md
(+30 files in other folders)
