[package]
name = "nostradamus"
edition = "2021"
version = "0.1.0"

[lib]
name = "nostradamus"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rc4 = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = 1
