[package]
name = "nostradamus"
edition = "2021"
version = "0.1.0"

[lib]
name = "nostradamus"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rc4 = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]  }

[[bench]]
name = "beam_search_benchmark"
harness = false

[[bench]]
name = "mcts_benchmark"
harness = false

[profile.release]
debug = 1
